fix: overflow cart

--- a/components/Header/Header.desktop.css
+++ b/components/Header/Header.desktop.css
@@ -164,159 +164,3 @@
     transition: var(--hover-transition);
   }
 }
-
-/* ----------------------------------------cart */
-.cart {
-  position: fixed;
-  top: 0;
-  right: -380px; /* começa fora da tela */
-  z-index: 10;
-
-  overflow: hidden;
-  overscroll-behavior: contain;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  height: 100vh;
-  width: 380px;
-  background-color: white;
-  box-shadow: 0px 0px 8px -4px black;
-
-  transition: right var(--hover-transition); /* aplica a transição no right */
-}
-
-/* ------------ scrlool bar-------------- */
-
-.cart::-webkit-scrollbar {
-  width: 3px;
-}
-
-.cart::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 8px;
-}
-
-.cart::-webkit-scrollbar-thumb {
-  background: rgba(206, 206, 206, 1);
-  border-radius: 8px;
-}
-
-.cart::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-/* ----------------- */
-
-.cart header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px;
-
-  position: fixed;
-  width: 330px;
-  z-index: 5;
-
-  border-radius: 5px;
-
-  background-color: white;
-}
-
-.cart header h1 {
-  cursor: default;
-}
-
-.cart-end {
-  cursor: pointer;
-  font-size: 30px;
-  font-weight: 700;
-
-  color: var(--primary);
-  transition: var(--hover-transition);
-}
-
-.cart-end:hover {
-  color: red;
-  transition: var(--hover-transition);
-}
-
-/* ----------- card */
-.card-container {
-  display: flex;
-  flex-direction: column;
-
-  margin-top: 70px;
-}
-
-.card {
-  width: 300px;
-  margin-bottom: 10px;
-
-  display: flex;
-  gap: 5px;
-  padding: 5px;
-
-  box-shadow: 0px 0px 8px -4px rgb(83, 83, 83);
-  border-radius: 10px;
-}
-.inf {
-  display: flex;
-  flex-direction: column;
-  width: 200px;
-  position: relative;
-}
-
-.inf h3 {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.card figure {
-  width: 100px;
-  height: 110px;
-
-  border-radius: 5px;
-}
-.card figure img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
-  border-radius: 5px;
-}
-
-.quant {
-  display: flex;
-}
-
-.quant p {
-  white-space: pre;
-}
-
-.inf button {
-  height: 40px;
-  width: 100%;
-
-  position: absolute;
-  bottom: 0;
-
-  border: none;
-  border-radius: 5px;
-  background-color: rgb(192, 47, 47);
-  color: white;
-  cursor: pointer;
-
-  transition: var(--hover-transition);
-}
-
-.inf button:hover {
-  background-color: rgb(151, 37, 37);
-  transition: var(--hover-transition);
-}
-.inf button:active {
-  background-color: rgb(104, 27, 27);
-  color: rgb(196, 196, 196);
-  transition: var(--hover-transition);
-}
