--- a/components/Header/components/Cart/Cart.css
+++ b/components/Header/components/Cart/Cart.css
@@ -5,17 +5,17 @@
   right: -380px; /* começa fora da tela */
   z-index: 10;
 
-  overflow: hidden;
+  overflow: scroll;
   overscroll-behavior: contain;
 
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 
   height: 100vh;
   width: 380px;
   background-color: white;
-  box-shadow: 0px 0px 8px -4px black;
+  box-shadow: 0px 0px 8px -4px rgb(0, 0, 0);
 
   transition: right var(--hover-transition); /* aplica a transição no right */
 }
