--- a/global.css
+++ b/global.css
@@ -4,14 +4,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
   padding: 0;
   background: var(--body-color);
   color: #333;
+
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 :root {
